--- a/docs/run_examples.man
+++ b/docs/run_examples.man
@@ -5,9 +5,12 @@ sbatch workflowmanager.sh -ref /usit/abel/u1/sebasso/mastertools/Parsnp-Linux64-
 comp run:
 sbatch workflowmanager.sh -ref /usit/abel/u1/sebasso/mastertools/Parsnp-Linux64-v1.2/refs/NC_002163-comp.fna -genomedir /work/projects/nn9305k/compgenomes/rawdata/campy_asms -CPUS 20 -abel 1
 
-freebee:
+freebee:(parsnp viruses testdata)
 bash workflowmanager.sh -ref /usit/abel/u1/sebasso/pargenomes/genomes/England1.fna -genomedir /usit/abel/u1/sebasso/pargenomes/genomes -CPUS 8
 
+freebee:(ksnp bacteria_small)
+bash workflowmanager.sh -ref /usit/abel/u1/sebasso/ksnp_small/EEE_Florida91-4697.fasta \
+-genomedir /usit/abel/u1/sebasso/ksnp_small/ -CPUS 8
 
 LOCAL:
 bash workflowmanager.sh -ref ~/Downloads/Example1/Genomes/EEE_Florida91-4697.fasta -genomedir ~/Downloads/Example1/Genomes -CPUS 4
