security parsnp 1. Parsnp now only returns exit code 1 if it fails instead of 0. :art:
docs
parsnp
1. updated reference file for parsnp, parsnp fails if length gap between reference and other genomes are to great. "if sizediff <= 0.6 or sizediff >= 1.4". New reference genome: Escherichia coli O157:H7 str. Sakai DNA. :warning:

fix:
cleanup.sh
1. kills subshells before deleting tmp folders, without this rm may fail if subprocesses are in a writing phase while main process deletes folders.

feat:
cleanup.sh
1. added cleanup_junk which are called standalone on success or at last if a run fails. :recycle: :art:

refactor:
tool_config.sh
1. Reversed array_tool list to wait on parsnp first, since its always faster. This allows to check how fast parsnp goes and if it finishes at all within time limits of slurm. When having ksnp first everything is killed when a time limit is reached. :clock1:

--- a/docs/run_examples.man
+++ b/docs/run_examples.man
@@ -1,6 +1,6 @@
 ABEL:
 ecoli run:
-sbatch workflowmanager.sh -ref /usit/abel/u1/sebasso/mastertools/Parsnp-Linux64-v1.2/refs/NC_002128.1-ecoli.fna \
+sbatch workflowmanager.sh -ref /usit/abel/u1/sebasso/mastertools/Parsnp-Linux64-v1.2/refs/BA000007.2-coli-O157-H7.fasta \
 -genomedir /work/projects/nn9305k/compgenomes/rawdata/ecoli_asms -CPUS 20 -abel 1
 
 comp run:
