--- a/docs/sbatch_squeue.man
+++ b/docs/sbatch_squeue.man
@@ -1,4 +1,9 @@
+SBATCH:
+#SBATCH --mail-type=END,FAIL,BEGIN # notifications for job done & fail & started
+#SBATCH --mail-user=sebasso@ifi.uio.no
 
+
+SQUEUE:
 #line in queue by pending jobs
 squeue -S S --states=PD | grep -n sebasso
 # by pending, configuring & running
@@ -6,4 +11,3 @@ squeue -S S --states=PD,CF,R | grep -n sebasso
 
 #print expected start time:
 squeue -u sebasso -O starttime
-
