--- a/docs/gnu-time-examples.man
+++ b/docs/gnu-time-examples.man
@@ -24,12 +24,12 @@ time slice expired).
 time -f "formatted_string_here"
 
 Example without command(High spec) :
-/usr/bin/time -f "cpu secs for: %S user %S sys \telapsed time: %E CPU: %P\n%M max memory(bytes) %W swapped-out %c 
+/usr/bin/time -f "cpu secs for: %S user %S sys \telapsed time: %E CPU: %P\n%M max memory(kbytes) %W swapped-out %c 
 context-switchs(involuntarily)\n%I num inputs files\t%O num output files\ncmd:\t%C" \ command options
 
 Example with command(High spec) :
 /usr/bin/time -f "cpu secs for: %S user %S sys \telapsed time: %E CPU: %P\nmax memory: %M 
-(bytes) swapped-out: %W  context-switchs: %c (involuntarily)\n%I number of inputs process\t%O number of outputs byt program\ncmd:\t%C" \
+(kbytes) swapped-out: %W  context-switchs: %c (involuntarily)\n%I number of inputs process\t%O number of outputs byt program\ncmd:\t%C" \
 bash workflowmanager.sh -ref ~/Downloads/Example1/Genomes/EEE_Florida91-4697.fasta -genomedir ~/Downloads/Example1/Genomes -CPUS 4
 
 
@@ -42,11 +42,11 @@ bash workflowmanager.sh -ref ~/Downloads/Example1/Genomes/EEE_Florida91-4697.fas
 
 
 #freebee examples(with working genome test paths)
-/usr/bin/time -f "cpu secs for: %S user %S sys \telapsed time: %E CPU: %P\nmax memory: %M (bytes) 
+/usr/bin/time -f "cpu secs for: %S user %S sys \telapsed time: %E CPU: %P\nmax memory: %M (kbytes) 
 swapped-out: %W  context-switchs: %c (involuntarily)\n%I number of inputs process\t%O number of 
 outputs byt program\ncmd:\t%C" bash workflowmanager.sh -ref $HOME/pargenomes/genomes/England1.fna -genomedir $HOME/pargenomes/genomes -CPUS 16
 
-/usr/bin/time -f "elapsed time: %E\tCPU: %P\tmax memory: %M (bytes)\n" \
+/usr/bin/time -f "elapsed time: %E\tCPU: %P\tmax memory: %M (kbytes)\n" \
 bash workflowmanager.sh -ref $HOME/pargenomes/genomes/England1.fna -genomedir $HOME/pargenomes/genomes -CPUS 16
 
 
