--- a/docs/treecmp.man
+++ b/docs/treecmp.man
@@ -12,19 +12,22 @@ example:
 SPLIT based distances:
 o ms – the Matching Split distance (Bogdanowicz and Giaro 2012)
 	MS distance is more sensitive than RF and is resistant to displacement of a small number of leaves, discussed in detail in Section 5.
-	vs: "k times Theorem 5.3 or 5.4 we obtain that relocating a constant number k of leaves in the trees can 		change their MS distance by a value of the order OðnÞ, which is asymptotically small in comparison to 		the maximal possible distance in T n for MS, equal to  ðn2Þ (for the proof, see Section 6). Therefore, 		for large phylogenies, the relocation of a bounded number of leaves does not cause significant changes 		to MS. This is the fundamental advantage of MS over the RF metric."
+	vs: "k times Theorem 5.3 or 5.4 we obtain that relocating a constant number k of leaves in the trees can change their MS distance by a value of the order OðnÞ, which is asymptotically small in comparison to 	the maximal possible distance in T n for MS, equal to  ðn2Þ (for the proof, see Section 6). Therefore, 		for large phylogenies, the relocation of a bounded number of leaves does not cause significant changes 		to MS. This is the fundamental advantage of MS over the RF metric."
 
 o rf – the Robinson-Foulds distance (Robinson and Foulds 1981)
 	-> number of splits. NOT resistant to displacement of small number of leaves!
 		counts all splits not included in the other one
 	RF do not distinguish between rearrangements that aect the relationships between many leaves and rearrangements that affect only a few. since its based on "transformation operations". 
-	ref: http://www.maths.otago.ac.nz/~dbryant/Papers/00Distance.pdf
+	ref:
+		 http://www.maths.otago.ac.nz/~dbryant/Papers/00Distance.pdf
 	rf example:
-	http://biomcmc.blogspot.no/2013/02/the-difference-between-rf-and-nni.html
+		http://biomcmc.blogspot.no/2013/02/the-difference-between-rf-and-nni.html
+	explained as partitions and symmetric difference:
+		http://evolution.genetics.washington.edu/phylip/doc/treedist.html
 o pd – the path difference distance (Steel and Penny 1993) also called "cladistic difference" and "nodal distance"
 	->
 	def;  the square root of 2(PW ? Qt>])2, where Pt] and QtJ are
- 	the path lengths between pairs of taxa /and ; on the trees Tx and T2.
+ 	the path lengths between pairs of taxa /and ; on the trees Tx and T2.q
  	;. The metric measures the Euclidean distance between the path
  	lengths for all pairs of taxa (populations or languages) on each tr
 
